# docs/swagger.yaml
@@ -1,5 +1,30 @@
 basePath: /api/v1
 definitions:
+  dto.CreateCategoryRequest:
+    properties:
+      description:
+        type: string
+      name:
+        type: string
+    type: object
+  dto.CreateCostRequest:
+    properties:
+      amount:
+        type: number
+      category_id:
+        type: string
+      currency:
+        type: string
+      incurred_at:
+        $ref: '#/definitions/dto.CustomTime'
+      title:
+        type: string
+    type: object
+  dto.CustomTime:
+    properties:
+      time.Time:
+        type: string
+    type: object
   dto.LoginRequest:
     properties:
       email:
@@ -30,7 +55,9 @@ definitions:
     type: object
   model.Category:
     properties:
-      createdAt:
+      created_at:
+        type: string
+      deleted_at:
         type: string
       description:
         type: string
@@ -38,16 +65,50 @@ definitions:
         type: string
       name:
         type: string
-      updatedAt:
+      updated_at:
         type: string
       user:
         $ref: '#/definitions/model.User'
-      userID:
+      user_id:
         type: string
+    type: object
+  model.Cost:
+    properties:
+      amount:
+        type: number
+      category:
+        $ref: '#/definitions/model.Category'
+      category_id:
+        type: string
+      created_at:
+        type: string
+      currency:
+        type: string
+      deleted_at:
+        type: string
+      id:
+        type: string
+      incurred_at:
+        type: string
+      title:
+        type: string
+      updated_at:
+        type: string
+      user:
+        $ref: '#/definitions/model.User'
+      user_id:
+        type: string
+    required:
+    - amount
+    - currency
+    - incurred_at
+    - title
     type: object
   model.User:
     properties:
       created_at:
+        type: string
+      deleted_at:
         type: string
       email:
         type: string
@@ -177,6 +238,8 @@ paths:
           description: Failed to list categories
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: List categories
       tags:
       - categories
@@ -190,7 +253,7 @@ paths:
         name: category
         required: true
         schema:
-          $ref: '#/definitions/model.Category'
+          $ref: '#/definitions/dto.CreateCategoryRequest'
       produces:
       - application/json
       responses:
@@ -206,6 +269,8 @@ paths:
           description: Failed to create category
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Create a new category
       tags:
       - categories
@@ -235,6 +300,8 @@ paths:
           description: Failed to delete category
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Delete a category
       tags:
       - categories
@@ -265,6 +332,8 @@ paths:
           description: Failed to get category
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Get a category by ID
       tags:
       - categories
@@ -303,9 +372,175 @@ paths:
           description: Failed to update category
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: Update a category
       tags:
       - categories
+  /costs:
+    get:
+      description: Get a paginated list of costs
+      parameters:
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      - description: Offset
+        in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Cost'
+            type: array
+        "500":
+          description: Failed to list costs
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: List costs
+      tags:
+      - costs
+    post:
+      consumes:
+      - application/json
+      description: Create a new cost
+      parameters:
+      - description: Cost object
+        in: body
+        name: cost
+        required: true
+        schema:
+          $ref: '#/definitions/dto.CreateCostRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/model.Cost'
+        "400":
+          description: Invalid request payload
+          schema:
+            type: string
+        "500":
+          description: Failed to create cost
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Create a new cost
+      tags:
+      - costs
+  /costs/{id}:
+    delete:
+      description: Delete a cost by its ID
+      parameters:
+      - description: Cost ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "204":
+          description: No Content
+          schema:
+            type: string
+        "400":
+          description: Invalid cost ID
+          schema:
+            type: string
+        "404":
+          description: Cost not found
+          schema:
+            type: string
+        "500":
+          description: Failed to delete cost
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Delete a cost
+      tags:
+      - costs
+    get:
+      description: Get a cost by its ID
+      parameters:
+      - description: Cost ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Cost'
+        "400":
+          description: Invalid cost ID
+          schema:
+            type: string
+        "404":
+          description: Cost not found
+          schema:
+            type: string
+        "500":
+          description: Failed to get cost
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Get a cost by ID
+      tags:
+      - costs
+    put:
+      consumes:
+      - application/json
+      description: Update an existing cost
+      parameters:
+      - description: Cost ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Cost object
+        in: body
+        name: cost
+        required: true
+        schema:
+          $ref: '#/definitions/model.Cost'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Cost'
+        "400":
+          description: Invalid cost ID or payload
+          schema:
+            type: string
+        "404":
+          description: Cost not found
+          schema:
+            type: string
+        "500":
+          description: Failed to update cost
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: Update a cost
+      tags:
+      - costs
   /users:
     get:
       description: Get a paginated list of users
