# internal/dto/category_dto.go
@@ -1,0 +1,6 @@
+package dto
+
+type CreateCategoryRequest struct {
+	Name        string  `json:"name"`
+	Description *string `json:"description"`
+}
